fixing package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "jsonp",
   "version": "0.0.1",
-  "dependencies": {
-    "url": ">= 0.0.0",
-    "http": ">= 0.0.0"
-  },
   "engines": {
     "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
